@@ -42,7 +42,7 @@ CFLAGS_DEBUG = \
 -Wall -Wextra -Wundef -Wbad-function-cast -Wcast-align -Wstrict-prototypes \
 -Wno-unused \
 -std=c99  -U__STRICT_ANSI__ \
--fPIC -g -UNDEBUG -UNDEBUG1 -UNDEBUG2
+-fPIC -g -pg -UNDEBUG -UNDEBUG1 -UNDEBUG2
 
 # C++ compiler
 CXX = g++
@@ -60,7 +60,7 @@ CXXFLAGS_DEBUG = \
 -Wcast-qual -Wswitch \
 -Wall -Wextra -Wundef -Wcast-align \
 -Wno-unused \
--g -O0 -UNDEBUG
+-g -pg -O0 -UNDEBUG
 
 AR = ar
 RANLIB = ranlib
