@@ -1,10 +1,6 @@
 /**************************************************************************
  *
- *  NOLL decision procedure
- *
- *  Copyright (C) 2012-2013
- *    LIAFA (University of Paris Diderot and CNRS)
- *
+ *  SPEN decision procedure
  *
  *  you can redistribute it and/or modify it under the terms of the GNU
  *  Lesser General Public License as published by the Free Software
@@ -118,4 +114,4 @@ extern "C"
 }
 #endif
 
-#endif                          /* _NOL_VARS_H_ */
+#endif                          /* _NOLL_VARS_H_ */
